templates/cryptlex-enterprise_template.yaml
---
# Source: cryptlex-enterprise/templates/services/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-cache-service
  labels:
    app: release-name-cache-service
spec:
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    app: release-name-cache
---
# Source: cryptlex-enterprise/templates/services/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-dashboard-service
  labels:
    app: release-name-dashboard-service
spec:
  
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
  selector:
    app: release-name-dashboard
---
# Source: cryptlex-enterprise/templates/services/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-database-service
  labels:
    app: release-name-database-service
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: release-name-database
---
# Source: cryptlex-enterprise/templates/services/filestore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-filestore-service
  labels:
    app: release-name-filestore-service
spec:
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: release-name-filestore
---
# Source: cryptlex-enterprise/templates/services/geoip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-geoip-service
  labels:
    app: release-name-geoip-service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: release-name-geoip
---
# Source: cryptlex-enterprise/templates/services/release-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-release-server-service
  labels:
    app: release-name-release-server-service
spec:
  
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: release-name-release-server
---
# Source: cryptlex-enterprise/templates/services/web-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-web-api-service
  labels:
    app: release-name-web-api-service
spec:
  
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: release-name-web-api
---
# Source: cryptlex-enterprise/templates/deployments/cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-cache
  labels:
    app: release-name-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-cache
  template:
    metadata:
      labels:
        app: release-name-cache
    spec:
      containers:
        - name: cache
          image: "redis:7-alpine"
          imagePullPolicy: IfNotPresent
          command: ["redis-server", "/config/redis.conf"]
          volumeMounts:
            - name: cache-volume
              mountPath: /config
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1024Mi
          ports:
            - containerPort: 6379
      restartPolicy: Always
      volumes:
        - name: cache-volume
          configMap:
            name: release-name-cache-config
            items:
              - key: redis-config
                path: redis.conf
---
# Source: cryptlex-enterprise/templates/deployments/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-dashboard
  labels:
    app: release-name-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-dashboard
  template:
    metadata:
      labels:
        app: release-name-dashboard
      annotations:
        checksum/config: 3c24af7be5803d7502ef375d6ac97c9ab8f93a532444720f869eaab7be5e4a68
    spec:
      containers:
        - name: dashboard
          image: "cryptlex/cryptlex-web-dashboard:3.44.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4200
          readinessProbe:
            httpGet:
               path: /status
               port: 4200
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
      restartPolicy: Always
      imagePullSecrets:
        - name: release-name-docker-secret
---
# Source: cryptlex-enterprise/templates/deployments/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-database
  labels:
    app: release-name-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-database
  template:
    metadata:
      labels:
        app: release-name-database
      annotations:
        checksum/secret: b5eadba3b4dbb1d98d4495914ed74be4e86b62ce41e7bea8a4886bcd74d4ba69
    spec:
      containers:
        - name: database
          image: "postgres:12.3-alpine"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database-volume
      volumes:
        - name: database-volume
          persistentVolumeClaim:
            claimName: release-name-database-pv-claim
---
# Source: cryptlex-enterprise/templates/deployments/filestore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-filestore
  labels:
    app: release-name-filestore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-filestore
  template:
    metadata:
      labels:
        app: release-name-filestore
      annotations:
        checksum/secret: 3489927644dd0290ac5675a761d409089b4e0f949fb6d6ff3eb4a783793fa3d7
    spec:
      volumes:
        - name: filestore-volume
          persistentVolumeClaim:
            claimName: release-name-filestore-pv-claim
      containers:
        - name: filestore
          image: "minio/minio:RELEASE.2020-07-14T19-14-30Z"
          imagePullPolicy: IfNotPresent
          args:
            - server
            - /var/minio/data
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath:  /var/minio/data
              name: filestore-volume
---
# Source: cryptlex-enterprise/templates/deployments/geoip-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-geoip
  labels:
    app: release-name-geoip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-geoip
  template:
    metadata:
      labels:
        app: release-name-geoip
    spec:
      containers:
        - name: geoip
          image: "cryptlex/freegeoip:3.7.3"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
# Source: cryptlex-enterprise/templates/deployments/release-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-release-server
  labels:
    app: release-name-release-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-release-server
  template:
    metadata:
      labels:
        app: release-name-release-server
      annotations:
        checksum/config: 6c8bc37a343986fec041ed9221148edb11e05e77cf4048382b9b441434897eda
        checksum/secret: 3489927644dd0290ac5675a761d409089b4e0f949fb6d6ff3eb4a783793fa3d7
    spec:
      containers:
        - name: release-server
          image: "cryptlex/cryptlex-release-server:3.2.6"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
               path: /v3/status
               port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
      restartPolicy: Always
      imagePullSecrets:
        - name: release-name-docker-secret
---
# Source: cryptlex-enterprise/templates/deployments/web-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-web-api
  labels:
    app: release-name-web-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: release-name-web-api
  template:
    metadata:
      labels:
        app: release-name-web-api
      annotations:
        checksum/config: 1218dd9b2d10d5f635e20a8543f4b685cc6072d8f7b25cbf1ad9240cf4a998a8
        checksum/secret: 336e37ba047873aef245a11c2b5f6cd8b5081e5a35d6a01f9d4625943d594a82
    spec:
      containers:
        - name: web-api
          image: "cryptlex/cryptlex-web-api-enterprise:3.71.19"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 200m
              memory: "500Mi"
            limits:
              memory: "1.5Gi"
          readinessProbe:
            httpGet:
               path: /healthz
               port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
      restartPolicy: Always
      imagePullSecrets:
        - name: release-name-docker-secret
---
# Source: cryptlex-enterprise/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-ingress
  annotations:
    
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    
    
    
spec:
  ingressClassName: nginx
  
  rules:
    - host: "cryptlex-api.mycompany.com"
      http:
        paths:
          - backend:
              service:
                name: release-name-web-api-service
                port: 
                  number: 5000
            pathType: ImplementationSpecific 
    - host: "cryptlex-app-legacy.mycompany.com"
      http:
        paths:
          - backend:
              service:
                name: release-name-dashboard-service
                port: 
                  number: 4200
            pathType: ImplementationSpecific 
    
    
    
    
    - host: "cryptlex-releases.mycompany.com"
      http:
        paths:
          - backend:
              service:
                name: release-name-release-server-service
                port: 
                  number: 3000
            pathType: ImplementationSpecific 
    
    - http:
        paths:
          - path: /v3/status
            backend:
              service:
                name: release-name-web-api-service
                port: 
                  number: 5000
            pathType: ImplementationSpecific
